logs/ft_smoke_20260410_064419.log
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/hungryeagle/qtip-olmoe/src/tripwires/test_ft_layer08_smoke.py", line 117
    print(f"  attn improvements: {[f'{r[\"improvement\"]*100:.0f}%' for r in attn_results]}")
                                         ^
SyntaxError: unexpected character after line continuation character
